@@ -101,6 +101,11 @@ Follow the instructions on the <a href="http://trac.webkit.org/wiki/BuildingGtk"
 Follow the instructions on the <a href="http://trac.webkit.org/wiki/QtWebKit">QtWebKit</a> wiki page.
 </div>
 
+<div class="efl-instructions">
+<h4>EFL</h4>
+Follow the instructions on the <a href="http://trac.webkit.org/wiki/EFLWebKit">EFLWebKit</a> wiki page.
+</div>
+
 <p>Once you have installed your developer tools, the next step is
 <a href="checkout.html">getting the code</a>.</p>
 <?php
