@@ -198,10 +198,12 @@ dt {
     line-height: normal;
 }
 
-.mac-instructions, .windows-instructions, .gtk-instructions, .qt-instructions {
+.mac-instructions, .windows-instructions, .gtk-instructions, .qt-instructions, .efl-instructions {
     border: 1px solid black;
     background-color: white;
     -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
     padding: 0 1em;
     margin: 1em 0;
 }
