@@ -1,3 +1,13 @@
+2012-03-01  Seo Sanghyeon  <sh4.seo@samsung.com>
+
+        Add a link to the EFL wiki page
+        https://bugs.webkit.org/show_bug.cgi?id=79439
+
+        Reviewed by Adam Barth.
+
+        * building/tools.html:
+        * css/main.css: Cross-browser border-radius.
+
 2012-02-24  Tom Zakrajsek  <tomz@codeaurora.org>
 
         team.html (on webkit.org) doesn't recognize codeaurora.org
